test/simple/ill-typed/ho_fun_appl.caprice
(* TEST
  include refutable;
*)


let f (g : int -> int) (x : (int -> int) -> bool) : int = 
  x g (* ERROR: returns bool, not int *)
